# object-tracker

./: .gitignore  CMakeLists.txt  main.cc
cmake/Modules/: FindProtobuf.cmake  Protobuf_VERSION.cmake
cmake/Modules/include/ffmpeg/libss/libavutil/: ffversion.h
cmake/Modules/lib/: libprotobuf-lite.so.13
cmake/Modules/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  protobuf-lite.pc  protobuf.pc
